<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_offline_download"
            android:icon="@drawable/ic_download_grey_24dp"
            android:title="@string/nav_download" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_collect" />
        <item
            android:id="@+id/nav_watch_later"
            android:icon="@drawable/ic_view_later_24dp"
            android:title="@string/nav_view_later"
            />

    </group>
</menu>